org-backup/2026-05-06-mdapi/unpackaged/objects/AuthorizeNet_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>APILoginId__c</fullName>
        <label>APILoginId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionKey__c</fullName>
        <label>TransactionKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseSandbox__c</fullName>
        <defaultValue>true</defaultValue>
        <label>UseSandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WebhookSigningKey__c</fullName>
        <label>Webhook Signing Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AuthorizeNet Config</label>
    <pluralLabel>AuthorizeNet Configs</pluralLabel>
</CustomObject>